# heyp-agents

./: .bazelrc  .clang-format  .gitignore  LICENSE  README.md  TODO  WORKSPACE  go.mod  go.sum  wrapgo.bash
bazel/: cc_defs.bzl  cc_static_library.bzl
deploy/cloudlab/: SWITCH-HIST  heyp-single-site.py
deploy/types/: BUILD.bazel  config.go
doc/cloudlab/: SWITCH-HIST  heyp-3-site.py  heyp-single-site-dual-nw.py  (+1 more)
heyp/: .clang-format  BUILD.bazel
heyp/alg/: BUILD.bazel  agg-info-views-test.cc  agg-info-views.cc  agg-info-views.h  debug.cc  debug.h  demand-predictor-test.cc  demand-predictor.cc  demand-predictor.h  export.cc  flow-volume.h  qos-degradation-test.cc  qos-degradation.cc  qos-degradation.h  qos-downgrade-test.cc  qos-downgrade.cc  qos-downgrade.h  rate-limits.cc  rate-limits.h  sampler-test.cc  sampler.h  unordered-ids.cc  unordered-ids.h
heyp/alg/downgrade/: BUILD.bazel  downgrade-knapsack-manual.cc  formatters.h  greedy-assign-test.cc  greedy-assign.h  hash-ring-test.cc  hash-ring.cc  hash-ring.h  iface-test.cc  iface.cc  iface.h  impl-hashing.cc  impl-hashing.h  impl-heyp-sigcomm-20.cc  impl-heyp-sigcomm-20.h  impl-hybrid-hashing.cc  impl-hybrid-hashing.h  impl-knapsack-solver.cc  impl-knapsack-solver.h  impl-largest-first.cc  impl-largest-first.h
heyp/alg/fairness/: BUILD.bazel  max-min-fairness-bench.cc  max-min-fairness-dist-bench.cc  max-min-fairness-dist-test.cc  max-min-fairness-dist.cc  max-min-fairness-dist.h  max-min-fairness-test.cc  max-min-fairness.cc  max-min-fairness.h  nth-element-test.cc  nth-element.h
heyp/alg/internal/: BUILD.bazel  downgrade-selector-hashing.cc  downgrade-selector-hashing.h  downgrade-selector-heyp-sigcomm-20.cc  downgrade-selector-heyp-sigcomm-20.h  downgrade-selector-iface-test.cc  downgrade-selector-iface.cc  downgrade-selector-iface.h  downgrade-selector-knapsack-solver.cc  downgrade-selector-knapsack-solver.h  downgrade-selector-largest-first.cc  downgrade-selector-largest-first.h  formatters.h  greedy-assign-test.cc  greedy-assign.h  hash-ring-test.cc  hash-ring.cc  hash-ring.h
heyp/app/testlopri/: BUILD.bazel  client.cc  merge-logs.cc  mk-expected-interarrival-dist.cc  mk-expected-tput.cc  server.c  server.cc
heyp/cli/: BUILD.bazel  parse.cc  parse.h
heyp/cluster-agent/: BUILD.bazel  alloc-recorder.cc  alloc-recorder.h  allocator-test.cc  allocator.cc  allocator.h  allocs-test.cc  allocs.cc  allocs.h  cluster-agent.cc  controller-iface.h  controller-test.cc  controller.cc  controller.h  fast-aggregator-test.cc  fast-aggregator.cc  fast-aggregator.h  fast-controller-test.cc  fast-controller.cc  fast-controller.h  fg-tracker.cc  fg-tracker.h  full-controller-test.cc  full-controller.cc  full-controller.h  server-test.cc  server.cc  server.h
heyp/cluster-agent/per-agg-allocators/: BUILD.bazel  impl-bwe.cc  impl-bwe.h  impl-fixed-host-pattern.cc  impl-fixed-host-pattern.h  impl-heyp-sigcomm-20.cc  impl-heyp-sigcomm-20.h  impl-nop.h  impl-simple-downgrade.cc  impl-simple-downgrade.h  interface.h  util-test.cc  util.cc  util.h
heyp/encoding/: BUILD.bazel  binary.h
heyp/flows/: BUILD.bazel  agg-marker.h  aggregate-state.h  aggregator-test.cc  aggregator.cc  aggregator.h  cluster-fg-state.h  cluster-state.h  dc-classifier.cc  dc-classifier.h  dc-mapper-test.cc  dc-mapper.cc  dc-mapper.h  map.h  state-test.cc  state.cc  state.h
heyp/host-agent/: BUILD.bazel  cluster-agent-channel.cc  cluster-agent-channel.h  daemon-test.cc  daemon.cc  daemon.h  enforcer.cc  enforcer.h  fake-ss-for-test.cc  flow-tracker-test.cc  flow-tracker.cc  flow-tracker.h  flow.cc  flow.h  gen-parse-ss.py  host-agent.cc  parse-ss-test.cc  parse-ss.cc  parse-ss.h  simulated-wan-db-test.cc  simulated-wan-db.cc  simulated-wan-db.h  urls-test.cc  urls.cc  urls.h
heyp/host-agent/enforcer-impl/: BUILD.bazel  iptables-controller-test.cc  iptables-controller.cc  iptables-controller.h  iptables-test.cc  iptables.cc  iptables.h  tc-caller-test.cc  tc-caller.cc  tc-caller.h  tc.cc  tc.h
heyp/host-agent/linux-enforcer/: BUILD.bazel  data-test.cc  data.cc  data.h  enforcer-test.cc  enforcer.cc  enforcer.h  fake-ip-addr-for-test.c  fake-iptables-restore-for-test.c  fake-iptables-save-for-test.c  fake-tc-for-test.c  iptables-controller-test.cc  iptables-controller.cc  iptables-controller.h  iptables-test.cc  iptables.cc  iptables.h  small-string-set-test.cc  small-string-set.cc  small-string-set.h  tc-caller-test.cc  tc-caller.cc  tc-caller.h
heyp/init/: BUILD.bazel  init.cc  init.h  parse-cmdline-test.cc  test-main.cc
heyp/integration/: BUILD.bazel  flow-state-collector.cc  flow-state-collector.h  host-agent-os-test.cc  host-agent-os-tester.cc  host-agent-os-tester.h  mk-want-vs-have-csv.cc  step-worker.cc  step-worker.h
heyp/io/: BUILD.bazel  debug-output-logger.cc  debug-output-logger.h  file.h  look-path-test.cc  look-path.cc  look-path.h  subprocess-test.cc  subprocess.cc  subprocess.h
heyp/io/testdata/: BUILD.bazel  test_echo_some_and_die_after.cc
heyp/log/: BUILD.bazel  debug.cc  debug.h  example_check_main.cc  logging.h  spdlog.cc  spdlog.h
heyp/posix/: BUILD.bazel  os.h  pidfile.cc  pidfile.h  pidfile_test.cc  strerror.cc  strerror.h
heyp/proto/: BUILD.bazel  alg.cc  alg.h  alg_test.cc  app.proto  config.proto  constructors.h  deployment.proto  fakehost.proto  fileio.cc  fileio.h  formatter.h  heyp.proto  integration.proto  monitoring.proto  ndjson-logger.cc  ndjson-logger.h  parse-text.h  parse_text.h  random.cc  random.h  routing.proto  stats.proto  testing.h
heyp/stats/: BUILD.bazel  cdf.h  hdrhist2csv.cc  hdrhistogram-test.cc  hdrhistogram.cc  hdrhistogram.h  recorder.cc  recorder.h
heyp/threads/: BUILD.bazel  executor-test.cc  executor.cc  executor.h  lossy-queue.h  mutex-helpers.h  par-indexed-map-test.cc  par-indexed-map.h  set-name.cc  set-name.h  waitgroup-test.cc  waitgroup.cc  waitgroup.h
prebuilt/: README.md  collect-envoy-stats  ss
tools/: build-iproute-tools.bash  collect-aux-bins.bash  gazelle.bash  install-work-toolchain.bash  mk-export-bundle.bash  mk-firecracker-rootfs.bash  regen.bash
(+309 files in other folders)
