load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(
    default_visibility = ["//heyp:__subpackages__"],
)

cc_library(
    name = "debug",
    srcs = ["debug.cc"],
    hdrs = ["debug.h"],
)

cc_library(
    name = "demand-predictor",
    srcs = ["demand-predictor.cc"],
    hdrs = ["demand-predictor.h"],
    deps = [
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "qos-degradation",
    srcs = ["qos-degradation.cc"],
    hdrs = ["qos-degradation.h"],
    deps = [
        ":debug",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/time",
        "@glog",
    ],
)

cc_library(
    name = "rate-limits",
    srcs = ["rate-limits.cc"],
    hdrs = ["rate-limits.h"],
    deps = [
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/base",
    ],
)

cc_test(
    name = "demand-predictor-test",
    srcs = ["demand-predictor-test.cc"],
    deps = [
        ":demand-predictor",
        "//heyp/init:test-main",
    ],
)

cc_test(
    name = "qos-degradation-test",
    srcs = ["qos-degradation-test.cc"],
    deps = [
        ":qos-degradation",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "@com_google_absl//absl/functional:bind_front",
    ],
)
