load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:cc_static_library.bzl", "cc_static_library")

package(
    default_visibility = ["//heyp:__subpackages__"],
)

cc_static_library(
    name = "export_bundle",
    deps = [":export"],
)

cc_library(
    name = "export",
    srcs = ["export.cc"],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_uluyol_routing_algos//routing-algos/alg:max-min-fairness",
        "@com_google_ortools//ortools/algorithms:knapsack_solver_lib",
    ],
)

cc_library(
    name = "agg-info-views",
    srcs = ["agg-info-views.cc"],
    hdrs = ["agg-info-views.h"],
    deps = [
        "//heyp/proto:alg",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "debug",
    srcs = ["debug.cc"],
    hdrs = ["debug.h"],
)

cc_library(
    name = "demand-predictor",
    srcs = ["demand-predictor.cc"],
    hdrs = ["demand-predictor.h"],
    deps = [
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "qos-downgrade",
    srcs = ["qos-downgrade.cc"],
    hdrs = ["qos-downgrade.h"],
    deps = [
        ":agg-info-views",
        ":debug",
        "//heyp/log:spdlog",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/time",
        "@com_google_ortools//ortools/algorithms:knapsack_solver_lib",
    ],
)

cc_library(
    name = "rate-limits",
    srcs = ["rate-limits.cc"],
    hdrs = ["rate-limits.h"],
    deps = [
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/base",
    ],
)

cc_test(
    name = "agg-info-views-test",
    srcs = ["agg-info-views-test.cc"],
    deps = [
        ":agg-info-views",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "demand-predictor-test",
    srcs = ["demand-predictor-test.cc"],
    deps = [
        ":demand-predictor",
        "//heyp/init:test-main",
    ],
)

cc_test(
    name = "qos-downgrade-test",
    srcs = ["qos-downgrade-test.cc"],
    deps = [
        ":qos-downgrade",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "@com_google_absl//absl/functional:bind_front",
    ],
)
