load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//heyp:__subpackages__"],
)

cc_library(
    name = "parse",
    srcs = ["parse.cc"],
    hdrs = ["parse.h"],
    deps = [
        "//heyp/alg:demand-predictor",
        "//heyp/proto:config_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)
