load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:cc_defs.bzl", "heyp_cc_binary")

heyp_cc_binary(
    name = "cluster-agent",
    srcs = ["cluster-agent.cc"],
    deps = [
        ":alloc-recorder",
        ":allocator",
        ":server",
        "//heyp/cli:parse",
        "//heyp/flows:aggregator",
        "//heyp/init",
        "//heyp/proto:fileio",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/time",
        "//heyp/log",
    ],
)

cc_library(
    name = "alloc-recorder",
    srcs = ["alloc-recorder.cc"],
    hdrs = ["alloc-recorder.h"],
    deps = [
        "//heyp/posix:strerror",
        "//heyp/proto:fileio",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
        "//heyp/log",
    ],
)

cc_library(
    name = "allocator",
    srcs = ["allocator.cc"],
    hdrs = ["allocator.h"],
    deps = [
        ":alloc-recorder",
        ":allocs",
        "//heyp/alg:qos-degradation",
        "//heyp/alg:rate-limits",
        "//heyp/proto:alg",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/threads:executor",
        "@com_github_uluyol_routing_algos//routing-algos/alg:max-min-fairness",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
        "//heyp/log",
    ],
)

cc_library(
    name = "allocs",
    srcs = ["allocs.cc"],
    hdrs = ["allocs.h"],
    deps = [
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "controller",
    srcs = ["controller.cc"],
    hdrs = ["controller.h"],
    deps = [
        ":allocator",
        ":allocs",
        "//heyp/alg:debug",
        "//heyp/flows:aggregator",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "server",
    srcs = ["server.cc"],
    hdrs = ["server.h"],
    deps = [
        ":allocator",
        ":controller",
        "//heyp/proto:heyp_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
        "//heyp/log",
    ],
)

cc_test(
    name = "allocator-test",
    srcs = ["allocator-test.cc"],
    deps = [
        ":allocator",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "allocs-test",
    srcs = ["allocs-test.cc"],
    deps = [
        ":allocs",
        "//heyp/init:test-main",
        "//heyp/proto:constructors",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "controller-test",
    srcs = ["controller-test.cc"],
    deps = [
        ":controller",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)
