load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:cc_defs.bzl", "heyp_cc_binary")

heyp_cc_binary(
    name = "cluster-agent",
    srcs = ["cluster-agent.cc"],
    deps = [
        ":allocator",
        ":server",
        "//heyp/cli:parse",
        "//heyp/flows:aggregator",
        "//heyp/init",
        "//heyp/log:spdlog",
        "//heyp/proto:fileio",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "allocator",
    srcs = ["allocator.cc"],
    hdrs = ["allocator.h"],
    deps = [
        ":allocs",
        "//heyp/cluster-agent/per-agg-allocators",
        "//heyp/log:spdlog",
        "//heyp/proto:ndjson-logger",
        "//heyp/threads:executor",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "allocs",
    srcs = ["allocs.cc"],
    hdrs = ["allocs.h"],
    deps = [
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "controller",
    srcs = ["controller.cc"],
    hdrs = ["controller.h"],
    deps = [
        ":allocator",
        ":allocs",
        "//heyp/alg:debug",
        "//heyp/flows:aggregator",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "server",
    srcs = ["server.cc"],
    hdrs = ["server.h"],
    deps = [
        ":allocator",
        ":controller",
        "//heyp/log:spdlog",
        "//heyp/proto:heyp_cc_grpc",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_test(
    name = "allocator-test",
    srcs = ["allocator-test.cc"],
    deps = [
        ":allocator",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "allocs-test",
    srcs = ["allocs-test.cc"],
    deps = [
        ":allocs",
        "//heyp/init:test-main",
        "//heyp/proto:constructors",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "controller-test",
    srcs = ["controller-test.cc"],
    deps = [
        ":controller",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "server-test",
    srcs = ["server-test.cc"],
    deps = [
        ":server",
        "//heyp/host-agent:cluster-agent-channel",
        "//heyp/init:test-main",
        "//heyp/proto:constructors",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
        "@com_github_grpc_grpc//:grpc++",
    ],
)
