load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:cc_defs.bzl", "heyp_cc_binary")

heyp_cc_binary(
    name = "cluster-agent",
    srcs = ["cluster-agent.cc"],
    deps = [
        ":allocator",
        ":fast-controller",
        ":full-controller",
        ":server",
        "//heyp/cli:parse",
        "//heyp/flows:aggregator",
        "//heyp/init",
        "//heyp/log:spdlog",
        "//heyp/proto:fileio",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "allocator",
    srcs = ["allocator.cc"],
    hdrs = ["allocator.h"],
    deps = [
        ":allocs",
        "//heyp/cluster-agent/per-agg-allocators:impl-bwe",
        "//heyp/cluster-agent/per-agg-allocators:impl-fixed-host-pattern",
        "//heyp/cluster-agent/per-agg-allocators:impl-heyp-sigcomm-20",
        "//heyp/cluster-agent/per-agg-allocators:impl-nop",
        "//heyp/cluster-agent/per-agg-allocators:impl-simple-downgrade",
        "//heyp/cluster-agent/per-agg-allocators:interface",
        "//heyp/log:spdlog",
        "//heyp/proto:ndjson-logger",
        "//heyp/threads:executor",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "allocs",
    srcs = ["allocs.cc"],
    hdrs = ["allocs.h"],
    deps = [
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "controller-iface",
    hdrs = ["controller-iface.h"],
    deps = [
        "//heyp/proto:heyp_cc_proto",
        "//heyp/threads:par-indexed-map",
    ],
)

cc_library(
    name = "fast-aggregator",
    srcs = ["fast-aggregator.cc"],
    hdrs = ["fast-aggregator.h"],
    deps = [
        "//heyp/alg:agg-info-views",
        "//heyp/alg:sampler",
        "//heyp/cluster-agent/per-agg-allocators:util",
        "//heyp/flows:map",
        "//heyp/threads:executor",
    ],
)

cc_library(
    name = "fast-controller",
    srcs = ["fast-controller.cc"],
    hdrs = ["fast-controller.h"],
    deps = [
        ":controller-iface",
        ":fast-aggregator",
        "//heyp/alg:sampler",
        "//heyp/alg:unordered-ids",
        "//heyp/alg/downgrade:impl-hashing",
        "//heyp/cluster-agent/per-agg-allocators:util",
        "//heyp/flows:agg-marker",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/threads:executor",
        "//heyp/threads:par-indexed-map",
        "@com_google_absl//absl/container:btree",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/functional:function_ref",
    ],
)

cc_library(
    name = "full-controller",
    srcs = ["full-controller.cc"],
    hdrs = ["full-controller.h"],
    deps = [
        ":allocator",
        ":allocs",
        ":controller-iface",
        "//heyp/alg:debug",
        "//heyp/flows:aggregator",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "server",
    srcs = ["server.cc"],
    hdrs = ["server.h"],
    deps = [
        ":controller-iface",
        "//heyp/log:spdlog",
        "//heyp/proto:heyp_cc_grpc",
        "//heyp/threads:mutex-helpers",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_test(
    name = "allocator-test",
    srcs = ["allocator-test.cc"],
    deps = [
        ":allocator",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "allocs-test",
    srcs = ["allocs-test.cc"],
    deps = [
        ":allocs",
        "//heyp/init:test-main",
        "//heyp/proto:constructors",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "fast-aggregator-test",
    srcs = ["fast-aggregator-test.cc"],
    deps = [
        ":fast-aggregator",
        "//heyp/init:test-main",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "fast-controller-test",
    srcs = ["fast-controller-test.cc"],
    deps = [
        ":fast-controller",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "full-controller-test",
    srcs = ["full-controller-test.cc"],
    deps = [
        ":full-controller",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
    ],
)

cc_test(
    name = "server-test",
    srcs = ["server-test.cc"],
    deps = [
        ":full-controller",
        ":server",
        "//heyp/host-agent:cluster-agent-channel",
        "//heyp/init:test-main",
        "//heyp/proto:constructors",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
        "@com_github_grpc_grpc//:grpc++",
    ],
)
