load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//heyp:__subpackages__"])

cc_library(
    name = "dc-classifier",
    srcs = ["dc-classifier.cc"],
    hdrs = ["dc-classifier.h"],
    deps = [
        "@com_google_absl//absl/strings",
        "@glog",
    ],
)

cc_library(
    name = "state",
    srcs = ["state.cc"],
    hdrs = ["state.h"],
    deps = [
        "//heyp/alg:demand-predictor",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@glog",
    ],
)

cc_test(
    name = "state-test",
    srcs = ["state-test.cc"],
    deps = [
        ":state",
        "//heyp/proto:constructors",
        "@com_google_absl//absl/random",
        "@gtest//:gtest_main",
    ],
)
