load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//heyp:__subpackages__"])

cc_library(
    name = "cluster-fg-state",
    hdrs = ["cluster-fg-state.h"],
    deps = [":state"],
)

cc_library(
    name = "dc-mapper",
    srcs = ["dc-mapper.cc"],
    hdrs = ["dc-mapper.h"],
    deps = [
        "//heyp/proto:config_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
        "@glog",
    ],
)

cc_library(
    name = "state",
    srcs = ["state.cc"],
    hdrs = ["state.h"],
    deps = [
        "//heyp/alg:demand-predictor",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@glog",
    ],
)

cc_test(
    name = "state-test",
    srcs = ["state-test.cc"],
    deps = [
        ":state",
        "//heyp/proto:constructors",
        "@com_google_absl//absl/random",
        "@gtest//:gtest_main",
    ],
)
