load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(
    default_visibility = [
        "//heyp/host-agent:__subpackages__",
        "//heyp/integration:__subpackages__",
    ],
)

cc_binary(
    name = "host-agent",
    srcs = ["host-agent.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":daemon",
        ":enforcer",
        ":flow-tracker",
        "//heyp/cli:parse",
        "//heyp/flows:dc-mapper",
        "//heyp/init",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:fileio",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "daemon",
    srcs = ["daemon.cc"],
    hdrs = ["daemon.h"],
    deps = [
        ":enforcer",
        ":flow-tracker",
        "//heyp/flows:aggregator",
        "//heyp/flows:dc-mapper",
        "//heyp/proto:constructors",
        "//heyp/proto:heyp_cc_grpc",
        "//heyp/proto:heyp_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
        "@glog",
    ],
)

cc_library(
    name = "enforcer",
    srcs = ["enforcer.cc"],
    hdrs = ["enforcer.h"],
    deps = [
        ":flow-tracker",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/types:span",
        "@glog",
    ],
)

cc_library(
    name = "flow-tracker",
    srcs = ["flow-tracker.cc"],
    hdrs = ["flow-tracker.h"],
    deps = [
        ":urls",
        "//heyp/alg:demand-predictor",
        "//heyp/flows:state",
        "//heyp/proto:alg",
        "@boost//:process",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
        "@glog",
    ],
)

cc_library(
    name = "urls",
    srcs = ["urls.cc"],
    hdrs = ["urls.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "daemon-test",
    srcs = ["daemon-test.cc"],
    deps = [
        ":daemon",
        "//heyp/flows:dc-mapper",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_binary(
    name = "fake-ss-for-test",
    testonly = 1,
    srcs = ["fake-ss-for-test.cc"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

cc_test(
    name = "flow-tracker-test",
    srcs = ["flow-tracker-test.cc"],
    data = [
        ":fake-ss-for-test",
    ],
    deps = [
        ":flow-tracker",
        "//heyp/alg:demand-predictor",
        "//heyp/init:test-main",
        "//heyp/proto:constructors",
    ],
)

cc_test(
    name = "urls-test",
    srcs = ["urls-test.cc"],
    deps = [
        ":urls",
        "//heyp/init:test-main",
    ],
)
