load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:cc_defs.bzl", "heyp_cc_binary")

package(
    default_visibility = [
        "//heyp/cluster-agent:__subpackages__",
        "//heyp/host-agent:__subpackages__",
        "//heyp/integration:__subpackages__",
    ],
)

heyp_cc_binary(
    name = "host-agent",
    srcs = ["host-agent.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":daemon",
        ":enforcer",
        ":flow-tracker",
        "//heyp/cli:parse",
        "//heyp/flows:dc-mapper",
        "//heyp/host-agent/linux-enforcer:data",
        "//heyp/host-agent/linux-enforcer:enforcer",
        "//heyp/init",
        "//heyp/posix:os",
        "//heyp/posix:pidfile",
        "//heyp/proto:config_cc_proto",
        "//heyp/proto:fileio",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "cluster-agent-channel",
    srcs = ["cluster-agent-channel.cc"],
    hdrs = ["cluster-agent-channel.h"],
    deps = [
        "//heyp/proto:heyp_cc_grpc",
        "//heyp/proto:heyp_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/synchronization",
    ],
)

cc_library(
    name = "daemon",
    srcs = ["daemon.cc"],
    hdrs = ["daemon.h"],
    deps = [
        ":cluster-agent-channel",
        ":enforcer",
        ":flow-tracker",
        "//heyp/flows:aggregator",
        "//heyp/flows:dc-mapper",
        "//heyp/log:spdlog",
        "//heyp/proto:constructors",
        "//heyp/proto:heyp_cc_grpc",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/proto:ndjson-logger",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "enforcer",
    srcs = ["enforcer.cc"],
    hdrs = ["enforcer.h"],
    deps = [
        ":flow-tracker",
        "//heyp/log:spdlog",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "flow-tracker",
    srcs = ["flow-tracker.cc"],
    hdrs = ["flow-tracker.h"],
    deps = [
        ":parse-ss",
        "//heyp/alg:demand-predictor",
        "//heyp/flows:state",
        "//heyp/log:spdlog",
        "//heyp/proto:alg",
        "//heyp/threads:mutex-helpers",
        "@boost//:process",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
    ],
)

genrule(
    name = "gen-parse-ss",
    srcs = ["gen-parse-ss.py"],
    outs = ["parse-ss-inl.inc"],
    cmd = "$(location gen-parse-ss.py) > $@",
)

cc_library(
    name = "parse-ss",
    srcs = [
        "parse-ss.cc",
        "parse-ss-inl.inc",
    ],
    hdrs = ["parse-ss.h"],
    deps = [
        ":urls",
        "//heyp/proto:heyp_cc_proto",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "simulated-wan-db",
    srcs = ["simulated-wan-db.cc"],
    hdrs = ["simulated-wan-db.h"],
    deps = [
        "//heyp/flows:dc-mapper",
        "//heyp/proto:config_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "urls",
    srcs = ["urls.cc"],
    hdrs = ["urls.h"],
    visibility = ["//heyp:__subpackages__"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "daemon-test",
    srcs = ["daemon-test.cc"],
    deps = [
        ":daemon",
        "//heyp/flows:dc-mapper",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

heyp_cc_binary(
    name = "fake-ss-for-test",
    testonly = 1,
    srcs = ["fake-ss-for-test.cc"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
    ],
)

cc_test(
    name = "flow-tracker-test",
    srcs = ["flow-tracker-test.cc"],
    data = [
        ":fake-ss-for-test",
    ],
    deps = [
        ":flow-tracker",
        "//heyp/alg:demand-predictor",
        "//heyp/init:test-main",
        "//heyp/proto:constructors",
    ],
)

cc_test(
    name = "parse-ss-test",
    srcs = ["parse-ss-test.cc"],
    deps = [
        ":parse-ss",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
        "//heyp/proto:testing",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "simulated-wan-db-test",
    srcs = ["simulated-wan-db-test.cc"],
    deps = [
        ":simulated-wan-db",
        "//heyp/init:test-main",
        "//heyp/proto:parse-text",
    ],
)

cc_test(
    name = "urls-test",
    srcs = ["urls-test.cc"],
    deps = [
        ":urls",
        "//heyp/init:test-main",
    ],
)
