load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//heyp:__subpackages__"])

cc_library(
    name = "init",
    srcs = ["init.cc"],
    hdrs = ["init.h"],
    deps = [
        "//heyp/log",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:leak_check",
        "@com_google_absl//absl/debugging:symbolize",
        "@com_google_absl//absl/flags:parse",
    ],
)

cc_library(
    name = "test-main",
    testonly = True,
    srcs = ["test-main.cc"],
    deps = [
        ":init",
        "//heyp/log",
        "@com_google_absl//absl/flags:parse",
        "@gtest",
    ],
)

cc_test(
    name = "parse-cmdline-test",
    srcs = ["parse-cmdline-test.cc"],
    deps = [
        ":init",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/strings:str_format",
    ],
)
