load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_binary(
    name = "host-agent-os-test",
    srcs = ["host-agent-os-test.cc"],
    deps = [
        ":host-agent-os-tester",
        "//heyp/init",
        "@com_github_gflags_gflags//:gflags",
    ],
)

cc_binary(
    name = "mk-want-vs-have-csv",
    srcs = ["mk-want-vs-have-csv.cc"],
    deps = [
        "//heyp/init",
        "//heyp/proto:fileio",
        "//heyp/proto:integration_cc_proto",
        "@com_github_gflags_gflags//:gflags",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "flow-state-collector",
    srcs = ["flow-state-collector.cc"],
    hdrs = ["flow-state-collector.h"],
    deps = [
        ":step-worker",
        "//heyp/alg:demand-predictor",
        "//heyp/host-agent:flow-tracker",
        "//heyp/proto:heyp_cc_proto",
        "//heyp/proto:integration_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/synchronization",
        "@glog",
    ],
)

cc_library(
    name = "host-agent-os-tester",
    srcs = ["host-agent-os-tester.cc"],
    hdrs = ["host-agent-os-tester.h"],
    deps = [
        ":flow-state-collector",
        ":step-worker",
        "//heyp/host-agent:enforcer",
        "//heyp/host-agent:flow-tracker",
        "//heyp/host-agent/linux-enforcer:enforcer",
        "//heyp/posix:os",
        "//heyp/proto:integration_cc_proto",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/random",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "step-worker",
    srcs = ["step-worker.cc"],
    hdrs = ["step-worker.h"],
    linkopts = ["-pthread"],
    deps = [
        "//heyp/posix:strerror",
        "//heyp/proto:integration_cc_proto",
        "@com_google_absl//absl/cleanup",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@glog",
    ],
)
